frame/support/test/tests/pallet_ui/call_wrong_autoweight2.stderr
error[E0308]: mismatched types
  --> $DIR/call_wrong_autoweight2.rs:24:24
   |
24 |         #[pallet::autoweight(a)]
   |                              ^ expected `u32`, found `&u64`
